# adaptlight

./: .dockerignore  .gitignore  CLAUDE_SETUP.md  PLAN_state_representation.md  Procfile  README.md  STATEMACHINE.md  arduinoController.js  ethanlog.txt  index.html  init.js  lamp.ino  log.txt  package-lock.json  paramGenerators.js  pyproject.toml  railway.toml  raspiflow.md  requirements.txt  rules.js  script.js  server.js  statefunctions.js  statemachine.js  states.js  style.css  sync-to-pi.sh  test-tools.js  transitions.js  wsgi.py  y  y.pub
apps/eval/: __init__.py  config.yaml  main.py
apps/raspi/: __init__.py  adaptlight.service  config.yaml  main.py  requirements.txt  supabase_client.py
apps/web/: __init__.py  config.yaml  main.py  supabase_client.py  supabase_schema.sql
arduino/cobled_receiver/: cobled_receiver.ino
brain/: __init__.py  smgenerator.py
brain/apis/: api_executor.py  preset_apis.py
brain/core/: __init__.py  memory.py  pipeline_registry.py  rule.py  state.py  state_executor.py  state_machine.py
docs/: mic_controller_v2_plan.md
prompts/: parsing-prompt.js
raspi/: .gitignore  AWS_SETUP.md  README.md  README_RASPI.md  TESTING.md  TOOLS.md  config.example.yaml  led_control.py  main.py  plan.md  requirements.txt  setup.sh  test_animation.py  test_button.py  test_integrated.py  test_leds.py  test_loading.py  test_microphone.py  test_openai.py  test_voice_reactive_light.py
scripts/: run_raspi.sh  sync_to_raspi.sh
web_version/: init.js  package.json  paramGenerators.js  parsing-prompt.js  script.js  style.css  transitions.js
(+146 files in other folders)
